--- a/package.json
+++ b/package.json
@@ -43,25 +43,26 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "0.901.0",
     "@angular/cli": "9.1.0",
-    "@nrwl/workspace": "9.1.4",
-    "@types/node": "~12.12.31",
-    "dotenv": "8.2.0",
-    "ts-node": "~8.8.1",
-    "tslint": "~6.1.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.8.3",
-    "prettier": "2.0.2",
     "@angular/compiler-cli": "9.1.0",
     "@angular/language-service": "9.1.0",
-    "@angular-devkit/build-angular": "0.901.0",
-    "codelyzer": "~5.2.1",
-    "jest-preset-angular": "8.1.2",
+    "@nrwl/cypress": "9.1.4",
     "@nrwl/jest": "9.1.4",
-    "jest": "25.2.2",
+    "@nrwl/workspace": "9.1.4",
+    "@nstudio/xplat": "^9.0.1",
     "@types/jest": "25.1.4",
-    "ts-jest": "25.2.1",
+    "@types/node": "~12.12.31",
+    "codelyzer": "~5.2.1",
     "cypress": "^4.1.0",
-    "@nrwl/cypress": "9.1.4"
+    "dotenv": "8.2.0",
+    "eslint": "6.8.0",
+    "jest": "25.2.2",
+    "jest-preset-angular": "8.1.2",
+    "prettier": "2.0.2",
+    "ts-jest": "25.2.1",
+    "ts-node": "~8.8.1",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
   }
 }
