--- a/nx.json
+++ b/nx.json
@@ -17,6 +17,9 @@
     "todos-e2e": {
       "tags": [],
       "implicitDependencies": ["todos"]
+    },
+    "ionic-mobile": {
+      "tags": []
     }
   }
 }
