--- a/package.json
+++ b/package.json
@@ -47,12 +47,19 @@
     "@angular/platform-browser": "9.1.0",
     "@angular/platform-browser-dynamic": "9.1.0",
     "@angular/router": "9.1.0",
+    "@capacitor/android": "^1.5.1",
+    "@capacitor/core": "^1.5.1",
     "core-js": "^3.6.4",
-    "rxjs": "~6.5.4",
-    "zone.js": "^0.10.2"
+    "rxjs": "^6.5.4",
+    "zone.js": "^0.10.3",
+    "@ionic-native/core": "^5.23.0",
+    "@ionic-native/splash-screen": "^5.23.0",
+    "@ionic-native/status-bar": "^5.23.0",
+    "reflect-metadata": "^0.1.13",
+    "@ionic/angular": "^5.0.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.0",
+    "@angular-devkit/build-angular": "^0.901.0",
     "@angular/cli": "9.1.0",
     "@angular/compiler-cli": "9.1.0",
     "@angular/language-service": "9.1.0",
@@ -62,7 +69,7 @@
     "@nstudio/xplat": "^9.0.1",
     "@types/jest": "25.1.4",
     "@types/node": "~12.12.31",
-    "codelyzer": "~5.2.1",
+    "codelyzer": "~4.5.0",
     "cypress": "^4.1.0",
     "dotenv": "8.2.0",
     "eslint": "6.8.0",
@@ -72,6 +79,30 @@
     "ts-jest": "25.2.1",
     "ts-node": "~8.8.1",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.8.3",
+    "@nstudio/ionic-angular": "9.0.1",
+    "@nrwl/angular": "^9.1.4",
+    "@nstudio/ionic": "9.0.1",
+    "@nstudio/angular": "9.0.1",
+    "@nstudio/web-angular": "9.0.1",
+    "@capacitor/cli": "^1.5.1",
+    "@angular-devkit/architect": "^0.901.0",
+    "@angular-devkit/core": "^9.1.0",
+    "@angular-devkit/schematics": "^9.1.0",
+    "@ionic/angular-toolkit": "^2.2.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.1.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "^5.4.3"
+  },
+  "xplat": {
+    "prefix": "nrwl-xplat-ionic5-example",
+    "framework": "angular"
   }
 }
